--- a/OSINT/geosint/chall.html
+++ b/OSINT/geosint/chall.html
@@ -11,7 +11,7 @@
     <div id="outer-map" style="position: relative; height: 100%; width: 30%; float: right">
     	<div id="map-box">
 	    <div id="map" style="position: absolute; bottom: 40px;"></div>
-	    <button type="button" class="btn-submit-location" onclick=submit() id="submit">Where it be?</button>
+	    <button type="button" class="btn-submit-location" onclick=submit() id="submit">Select Location</button>
 	</div>
     </div>
       
@@ -19,7 +19,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/js/chall.js" type="text/javascript"></script>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBEH1Xy8WMoHzStugECzCe3trIirLEpN0&callback=initialize">
+        src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&callback=initialize">
     </script>
   </body>
 </html>
