--- a/OSINT/geosint/index.html
+++ b/OSINT/geosint/index.html
@@ -3,39 +3,36 @@
   <head>
     <meta charset="utf-8">
     <title>Geosint</title>
+    <link rel="icon" type="image/x-icon" href="/img/geosint-logo.ico">
     <link rel="stylesheet" href="/css/main.css" type="text/css">
   </head>
-  <body>
-	<h2 id="title">Welcome to Geosint!</h2>
-	<div id="chall-select">
-	    <h4 id="chall-title">Select a challenge:</h4>
-            <div id="cards">
-		<button id="chall-card" style="background: linear-gradient(to bottom, #FDB813, #E3350D);" onclick="window.location = '/chall1'">chall1</button>
-		<button id="chall-card" style="background: linear-gradient(to bottom, #8DC63F, #379F28);" onclick="window.location = '/chall2'">chall2</button>
-		<button id="chall-card" style="background: linear-gradient(to bottom, #7FC9E9, #0097D8);" onclick="window.location = '/chall3'">chall3</button>
-            </div>
-	</div>
-	<div class="bar"></div>
-	<div id="icon-select">
-	    <h4 id="title-icons">Select your icon:</h4>
-	    <div id="icons">
-		<img id="icon" src="/img/icons/pokeball.ico" onclick="setIcon(this)">
-		<img id="icon" src="/img/icons/pokeball_logo.ico" onclick="setIcon(this)">
-		<img id="icon" src="/img/icons/pikachu.ico" onclick="setIcon(this)">
-		<img id="icon" src="/img/icons/charizard.ico" onclick="setIcon(this)">
-		<img id="icon" src="/img/icons/bulbus.ico" onclick="setIcon(this)">
-		<img id="icon" src="/img/icons/beacon_badge.ico" onclick="setIcon(this)">
-		<img id="icon" src="/img/icons/coal_badge.ico" onclick="setIcon(this)">
-		<img id="icon" src="/img/icons/cobble_badge.ico" onclick="setIcon(this)">
-		<img id="icon" src="/img/icons/fen_badge.ico" onclick="setIcon(this)">
-		<img id="icon" src="/img/icons/forrest_badge.ico" onclick="setIcon(this)">
-		<img id="icon" src="/img/icons/icicle_badge.ico" onclick="setIcon(this)">
-                <img id="icon" src="/img/icons/mine_badge.ico" onclick="setIcon(this)">
-                <img id="icon" src="/img/icons/relic_badge.ico" onclick="setIcon(this)">
-                <img id="icon" src="/img/icons/tr.ico" onclick="setIcon(this)">
-                <img id="icon" src="/img/icons/justin.ico" onclick="setIcon(this)">
+  <body onload="setCards();">
+	<div id="header">
+	    <div id="logo-title">
+	    	<img id="logo" src="/img/geosint-logo.png">
+	    	<h1 id="title">Welcome to Geosint!</h2>
 	    </div>
-        </div>
+	    <div id="icons"></div>
+	</div>
+	<div id="main-body">
+	    <div id="competitions"></div>
+
+	    <div id="instructions">
+		<h2> Directions </h2>
+		<p>Hello and welcome to Geosint. This main page is where you can find challenges from 
+		various competitions. If you are here for a specific competition, make sure you choose
+		challenges from the appropriate category on the left. Newer competitions will show up
+		at the top of the list. I have left up challenges from previous competitions in case 
+		anyone wants to give them a crack :)</p><br/>
+		<p>If you are familiar with <a href="https://www.geoguessr.com/" target="_blank">GeoGuessr</a>,
+		then you probably already know how to play! If not, feel free to click on a challenge
+		to give it a try.</p><br/>
+		<p>To submit a guess, click somewhere on the mini-map and hit "Submit". You should 
+		receive a yes or no answer depending on if you were correct. "no" means you are 
+		incorrect and "yes + flag" means you got it right!</p><br/>
+		<p>Time to put your Geo OSINT skills to the test!</p>
+	    </div>
+	</div>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="/js/main.js" type="text/javascript"></script>
